<resources>
    <string name="app_name">GroupYak</string>

    <string name="action_settings">Settings</string>
    <string name="join_hint">Group ID</string>
    <string name="join_group">Join Group</string>
    <string name="delete_group">Delete</string>
    <string name="error">Oops! Something went wrong.</string>
    <string name="already_in_group">You are already in that group!</string>
    <string name="loading">Loading…</string>
    <string name="group_added">Group has been added!</string>
    <string name="group_not_found">Group does not exist!</string>

    <string name="groupcreate_name">Group display name</string>
    <string name="groupcreate_id">Group ID</string>
    <string name="create_group">Create Group</string>
    <string name="private_group">Private</string>
    <string name="group_in_use">Group ID is already in use!</string>
    <string name="group_created">Group created!</string>

    <string name="group_length_ID">Group ID has to be longer than 1 character!</string>
    <string name="group_length_display">Group display name has to be longer than 1 character!</string>

    <string name="post_title">Title</string>
    <string name="post_body">Body</string>
    <string name="post_created">Post created!</string>

    <string name="dialog_create_post">Create Post</string>

    <string name="group_length_title">Group title has to be longer than 1 character!</string>
    <string name="group_length_body">Group body has to be longer than 1 character!</string>

    <string name="button_new">New</string>
    <string name="button_hot">Hot</string>
    <string name="button_top">Top</string>

</resources>
