<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/actionbar"
        android:text="@string/dialog_create_post"
        android:contentDescription="@string/app_name"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textIsSelectable="true"
        android:layout_marginBottom="10dp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_post_title"
        android:hint="@string/post_title"
        android:layout_gravity="center_horizontal"
        android:inputType=
            "textCapSentences|textAutoCorrect"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/create_post_body"
        android:hint="@string/post_body"
        android:inputType=
            "textCapSentences|textAutoCorrect|textMultiLine"
        android:layout_gravity="center_horizontal" />
</LinearLayout>